--- a/BLETester/Base.lproj/Main.storyboard
+++ b/BLETester/Base.lproj/Main.storyboard
@@ -74,13 +74,26 @@
                                     <action selector="scanAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="kIU-7B-FbT"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9Xk-OQ-yhW">
+                                <rect key="frame" x="111.5" y="160" width="153" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="YGa-tV-UlP"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                <state key="normal" title="SyncDeviceTest"/>
+                                <connections>
+                                    <action selector="syncAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="6Mp-rf-HLs"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="KKz-J7-zMY" secondAttribute="trailing" constant="50" id="7Qe-cq-mKg"/>
                             <constraint firstAttribute="trailing" secondItem="I3a-8F-bzY" secondAttribute="trailing" constant="40" id="Aau-PH-Oez"/>
                             <constraint firstItem="wgh-cs-NpF" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="50" id="HGf-dA-fdf"/>
+                            <constraint firstItem="9Xk-OQ-yhW" firstAttribute="top" secondItem="5tC-67-Rba" secondAttribute="bottom" constant="10" id="I0j-hX-vRm"/>
                             <constraint firstItem="5tC-67-Rba" firstAttribute="top" secondItem="0Bh-ha-Akx" secondAttribute="bottom" constant="10" id="Ido-x2-3zj"/>
+                            <constraint firstItem="9Xk-OQ-yhW" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="KkF-gt-wL0"/>
                             <constraint firstItem="KKz-J7-zMY" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="50" id="OCd-9S-Qp5"/>
                             <constraint firstItem="5tC-67-Rba" firstAttribute="centerX" secondItem="KKz-J7-zMY" secondAttribute="centerX" id="OWb-Pz-Thv"/>
                             <constraint firstItem="I3a-8F-bzY" firstAttribute="top" secondItem="wgh-cs-NpF" secondAttribute="bottom" constant="50" id="Sws-X1-9hg"/>
